# grimoirelab-bestiary

./: .gitignore  .travis.yml  AUTHORS  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  tests.yml
bestiary/: _version.py
bestiary/app/: schema.py  urls.py  wsgi.py
bestiary/core/: api.py  apps.py  context.py  db.py  decorators.py  errors.py  jobs.py  log.py  models.py  schema.py  utils.py
bestiary/server/: bestiaryd.py
config/: schema.py  urls.py  wsgi.py
config/settings/: devel.py  testing.py
design/: editor.epgz
django_bestiary/: .gitignore  manage.py
django_bestiary/custodian/: urls.py  views.py
django_bestiary/django_bestiary/: create_admin_superuser.py  settings.py  urls.py  wsgi.py
django_bestiary/projects/: admin.py  beasts_exporter.py  beasts_feeder.py  bestiary_export.py  bestiary_import.py  data.py  forms.py  models.py  projects-release.json  serializers.py  tests.py  tests_feeder.py  tests_model.py  urls.py  views.py
docker/: Dockerfile  docker-compose-dev.yml  docker-compose.yml  setup.cfg  stage
pathfinder/: README.md  VizGrimoireUtils  pathfinder.py
pathfinder/fetch/: eclipse.py  fetcher.py  gerrit.py  github.py
pathfinder/repositories/: eclipse.py  gerrit.py  github.py  repositories.py
pathfinder/tests/: test_eclipse.py  test_gerrit.py  test_github.py
pathfinder/utils/: projects.py  update_projects.py
releases/unreleased/: archive-datasets.yml  authenticated-queries.yml  improve-performance-when-adding-organizations.yml  move-a-project-to-a-parent.yml  move-ancestors.yml  remove-projects.yml  support-adding-a-parent-to-new-projects.yml  support-credentials.yml  support-datasets.yml  support-ecosystems.yml  support-projects.yml  transactions-log.yml  update-projects.yml
tests/: test_api.py  test_db.py  test_errors.py  test_jobs.py  test_log.py  test_model.py  test_schema.py  test_utils.py
tests/data/: github_repos_1.json  github_repos_2.json  github_repos_forks.json  github_repos_issues.json  gitlab_group.json  gitlab_group_repos_1.json  gitlab_group_repos_2.json  gitlab_subgroup_repos.json  gitlab_subgroups.json  gitlab_user.json  (+2 more)
ui/: .eslintrc.js  package.json  vue.config.js
utils/: projects_github.json  update_projects.py
(+99 files in other folders)
