[tool.poetry]
name = "grimoirelab-bestiary"
version = "0.1.0-dev"
description = "A tool to visually manage software development ecosystems description."
authors = ["GrimoireLab Developers"]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-bestiary"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "bestiary" },
    { include = "tests", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-bestiary/issues"

[tool.poetry.scripts]
bestiaryd = "bestiary.server.bestiaryd:bestiaryd"

[tool.poetry.dependencies]
python = "^3.6"
django = "3.1"
grimoirelab_toolkit = "^0.2"
mysqlclient = "2.0.3"
python-dateutil = "^2.8.0"
graphene-django = "^2"
django-graphql-jwt = "^0.3.0"
PyJWT = "^1.7.0"
django-cors-headers = "^3.7.0"
rq = "^1.4.1"
django-rq = "^2.3.0"
requests = "^2.26.0"
cryptography = "^3"
uWSGI = "^2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
fakeredis = "^1.5.2"
httpretty = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
